fix: the button at the bottom of the page is too low and interfere with the graphics (#119)

--- a/src/components/Buttons/DownloadPlayerBtn/downloadPlayerBtn.scss
+++ b/src/components/Buttons/DownloadPlayerBtn/downloadPlayerBtn.scss
@@ -12,6 +12,7 @@
     font-size: 13px;
     line-height: 16px;
     letter-spacing: 0.407143px;
+    text-align: center;
   }
 
   p a {
