--- a/src/pages/Player/Player.scss
+++ b/src/pages/Player/Player.scss
@@ -199,3 +199,7 @@ body {
     display: flex;
   }
 }
+
+.getStarted-footer {
+  padding: 100px;
+}
